# lsp-skill

./: .gitignore  .gitmodules  .ignore  AGENTS.md  CONTRIBUTING.md  README.md  SKILL.md  install.sh  justfile  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: release-skill.yml
.opencode/commands/: lsp.md
scripts/: install.sh
skills/lsp-code-analysis/: SKILL.md
skills/lsp-code-analysis/scripts/: update.sh
src/lsp_cli/: __main__.py  client.py  exceptions.py  logging.py  server.py  settings.py  state.py
src/lsp_cli/cli/: definition.py  doc.py  locate.py  main.py  options.py  outline.py  reference.py  relation.py  rename.py  search.py  server.py  shared.py  symbol.py  utils.py
src/lsp_cli/manager/: __init__.py  __main__.py  capability.py  client.py  logging.py  manager.py  models.py
src/lsp_cli/utils/: http.py  locate.py  logging.py  model.py  socket.py  uds.py
tests/: conftest.py  test_cli_integration.py  test_cli_project.py  test_client_lookup.py
